# l2lidar_ros2

./: .gitignore  CMakeLists.txt  README.md  Unitree BSD-3 LICENSE.txt  package.xml  source_ROS2.sh
L2lidarClass/: L2lidar class README.md
L2lidarClass/docs/: L2lidar class V1.1.0.docx
L2lidarClass/include/: L2lidar.h  PCpoint.h  quaternion.h  unitree_lidar_utilitiesL2.h
L2lidarClass/src/: L2lidar.cpp
config/: l2lidar.yaml
docs/: Debuggin ROS2 node procedure.docx  Setting up ROS2 on RPI5.docx  Setup ROS2 prelim.docx  Skeleton ROS2 prelim.docx  Skeleton ROS2 start.docx  using ROS2 package in Qt.docx
executables/: QtCreator (ROS2 Jazzy).desktop  l2lidar_ros2-02-0_PC hash 2FC77636F6CF8C49E543AC62EB308185CC37067C4875126385BBF9BA57505C5B.txt  l2lidar_ros2-02-0_RPI5 hash 265887FD7A3E544343B02C9852994C44433D355F69256A55F0EFD995308E177C.txt
executables/gcc_arm64(RPI5)/: Command to run node.txt  README.md  l2lidar_node  l2lidar_ros2-01-0_RPI5 hash E120DD7B8209DC73B288A32AA8951783C0378BDB8D5BF64B29356E8D483C329B.txt  libQt6Network.so.6.10.2
executables/gcc_arm64(RPI5)/docs/: l2lidar_ros2 LICENSE.txt
include/: L2lidar.h  PCpoint.h  l2lidar_node.hpp  quaternion.h  unitree_lidar_protocolL2.h  unitree_lidar_utilitiesL2.h
launch/: l2lidar.launch.py  l2lidar_with_rviz.launch.py
rviz/: how to run Rviz2.txt  rvizl2lidar.rviz
src/: L2lidar.cpp  l2lidar_node backup.cpp  l2lidar_node.cpp  main.cpp
